--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <section>
         <h2>Hobbies</h2>
         <p>
-            Hello! My name is Kayembe Kayabo Samuel. I am originally from the Democratic Republic of Congo but currently live in Uganda as a student. 
+            Hello! sssssssMy name is Kayembe Kayabo Samuel. I am originally from the Democratic Republic of Congo but currently live in Uganda as a student. 
             I am passionate about computers, technology, and media. I enjoy learning new skills, especially in ICT and web design, and contributing to the community through my knowledge.
         </p>
     </section>
